# compare-all-the-names

./: .gitignore  MANIFEST.in  README.md  go.mod  main.go  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
compare-all-the-names/: compare_all_names.py  file_management.py  pattern_match.py  patterns.py  word_to_matches.py
compare_all_the_names/: __init__.py  clean.py  convert_to_ipa.py  find_which.py  nicknames.py  pair_to_names.py
